[gd_scene load_steps=7 format=3 uid="uid://c7o0nrg8q0r4f"]

[ext_resource type="Texture2D" uid="uid://c7iu7nm6rc280" path="res://Textures/Player/player_sprite.png" id="1_6qe51"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_7k64k"]
[ext_resource type="PackedScene" uid="uid://cy72t6lvvasq5" path="res://Util/hurtbox.tscn" id="3_fbjgh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3a6tq"]
radius = 6.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_82ads"]
size = Vector2(10, 21)

[sub_resource type="CircleShape2D" id="CircleShape2D_gqik8"]
radius = 368.049

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_7k64k")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6qe51")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_3a6tq")

[node name="WalkCycleTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource("3_fbjgh")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(2, 2)
shape = SubResource("RectangleShape2D_82ads")

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_gqik8")

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]

[editable path="Hurtbox"]
